--- a/Praksa/.classpath
+++ b/Praksa/.classpath
@@ -6,5 +6,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Mladen/Desktop/json-20220924.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Mladen/Desktop/jackson-databind-2.14.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Mladen/Desktop/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
